Revise calculations for FetalHemoglobinV2

--- a/YellowstonePathology/UI/Test/FetalHemoglobinV2ResultPage.xaml
+++ b/YellowstonePathology/UI/Test/FetalHemoglobinV2ResultPage.xaml
@@ -67,6 +67,7 @@
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"></ColumnDefinition>
+                        <ColumnDefinition Width="Auto"></ColumnDefinition>
                         <ColumnDefinition Width="*"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
@@ -93,51 +94,58 @@
                     </Grid.RowDefinitions>
 
                     <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,5" FontWeight="Bold">Ordered On:</TextBlock>
-                    <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,5" Text="{Binding Path=OrderedOnDescription}"></TextBlock>
+                    <TextBlock Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2" Margin="2,2,2,5" Text="{Binding Path=OrderedOnDescription}"></TextBlock>
 
-                    <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,5" FontWeight="Bold">Hb-F percent:</TextBlock>
-                    <TextBox Grid.Column="1" Grid.Row="2" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.HbFPercent}" />
+                    <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,5" FontWeight="Bold">Hb-F:</TextBlock>
+                    <TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,5" Width="100" Text="{Binding Path=PanelSetOrder.HbFPercent}" />
+                    <TextBlock Grid.Column="2" Grid.Row="1" Margin="2,2,2,5" TextAlignment="Left" Text="%" />
 
-                    <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,5" FontWeight="Bold">Hb-F Reference Range:</TextBlock>
-                    <TextBox Grid.Column="1" Grid.Row="3" Margin="2,2,2,5" Grid.ColumnSpan="2" Text="{Binding Path=PanelSetOrder.HbFReferenceRange}" />
+                    <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,5" FontWeight="Bold">Hb-F Reference Range:</TextBlock>
+                    <TextBox Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.HbFReferenceRange}" />
 
-                    <TextBlock Grid.Column="0" Grid.Row="5" Margin="2,2,2,5" FontWeight="Bold">Reference Range:</TextBlock>
-                    <TextBox Grid.Column="1" Grid.Row="5" Margin="2,2,2,5" Grid.ColumnSpan="2" Text="{Binding Path=PanelSetOrder.ReferenceRange}" />
 
-                    <TextBlock Grid.Column="0" Grid.Row="6" Margin="2,2,2,5" FontWeight="Bold">Rh Immune Globulin:</TextBlock>
-                    <TextBox Grid.Column="1" Grid.Row="6" Margin="2,2,2,5" Grid.ColumnSpan="2" Text="{Binding Path=PanelSetOrder.RhImmuneGlobulin}" />
+                    <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,5" FontWeight="Bold">Mother's Height:</TextBlock>
+                    <TextBox Grid.Column="1" Grid.Row="3" Margin="2,2,2,5" Width="100" Text="{Binding Path=PanelSetOrder.MothersHeightFeet}" />
+                    <StackPanel Grid.Column="3" Grid.Row="3" Orientation="Horizontal">
+                        <TextBlock Margin="2,2,2,5" FontWeight="Bold">Feet</TextBlock>
+                        <TextBox Margin="2,2,2,5" Width="100" Text="{Binding Path=PanelSetOrder.MothersHeightInches}" />
+                        <TextBlock Margin="2,2,2,5" FontWeight="Bold">Inches</TextBlock>
+                    </StackPanel>
 
-                    <TextBlock Grid.Column="0" Grid.Row="7" Margin="2,2,2,5" FontWeight="Bold">Mother's Height - Feet:</TextBlock>
-                    <TextBox Grid.Column="1" Grid.Row="7" Margin="2,2,2,5" Grid.ColumnSpan="2" Text="{Binding Path=PanelSetOrder.MothersHeightFeet}" />
 
-                    <TextBlock Grid.Column="0" Grid.Row="8" Margin="2,2,2,5" FontWeight="Bold">Mother's Height - Inches:</TextBlock>
-                    <TextBox Grid.Column="1" Grid.Row="8" Margin="2,2,2,5" Grid.ColumnSpan="2" Text="{Binding Path=PanelSetOrder.MothersHeightInches}" />
 
-                    <TextBlock Grid.Column="0" Grid.Row="9" Margin="2,2,2,5" FontWeight="Bold">Mother's Weight:</TextBlock>
-                    <TextBox Grid.Column="1" Grid.Row="9" Margin="2,2,2,5" Grid.ColumnSpan="2" Text="{Binding Path=PanelSetOrder.MothersWeight}" />
+                    <TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,5" FontWeight="Bold">Mother's Weight:</TextBlock>
+                    <TextBox Grid.Column="1" Grid.Row="4" Margin="2,2,2,5" Width="100" Text="{Binding Path=PanelSetOrder.MothersWeight}" />
+                    <TextBlock Grid.Column="2" Grid.Row="4" Margin="2,2,2,5" TextAlignment="Left" Text="lbs" />
 
-                    <TextBlock Grid.Column="0" Grid.Row="10" Margin="2,2,2,5" FontWeight="Bold">Mother's Blood Volume - Ml:</TextBlock>
-                    <TextBox Grid.Column="1" Grid.Row="10" Margin="2,2,2,5" Grid.ColumnSpan="2" Text="{Binding Path=PanelSetOrder.MothersBloodVolume}" />
+                    <TextBlock Grid.Column="0" Grid.Row="5" Margin="2,2,2,5" FontWeight="Bold">Mother's Blood Volume:</TextBlock>
+                    <TextBox Grid.Column="1" Grid.Row="5" Margin="2,2,2,5" Width="100" Text="{Binding Path=PanelSetOrder.MothersBloodVolume}" />
+                    <TextBlock Grid.Column="2" Grid.Row="5" Margin="2,2,2,5" TextAlignment="Left" Text="mL" />
 
-                    <TextBlock Grid.Column="0" Grid.Row="11" Margin="2,2,2,5" FontWeight="Bold">Fetal-Maternal Bleed:</TextBlock>
-                    <TextBox Grid.Column="1" Grid.Row="11" Margin="2,2,2,5" Grid.ColumnSpan="2" Text="{Binding Path=PanelSetOrder.FetalBleed}" />
+                    <TextBlock Grid.Column="0" Grid.Row="6" Margin="2,2,2,5" FontWeight="Bold">Fetal-Maternal Bleed:</TextBlock>
+                    <TextBox Grid.Column="1" Grid.Row="6" Margin="2,2,2,5" Width="100" Text="{Binding Path=PanelSetOrder.FetalBleed}" />
+                    <TextBlock Grid.Column="2" Grid.Row="6" Margin="2,2,2,5" TextAlignment="Left" Text="mL" />
 
-                    <TextBlock Grid.Column="0" Grid.Row="12" Margin="2,2,2,5" FontWeight="Bold">Recommended Number Of Vials:</TextBlock>
-                    <TextBox Grid.Column="1" Grid.Row="12" Margin="2,2,2,5" Grid.ColumnSpan="2" Text="{Binding Path=PanelSetOrder.RecommendedNumberOfVials}" />
+                    <TextBlock Grid.Column="0" Grid.Row="7" Margin="2,2,2,5" FontWeight="Bold">Fetal-Maternal Bleed Reference Range:</TextBlock>
+                    <TextBox Grid.Column="1" Grid.Row="7" Grid.ColumnSpan="2" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.FetalBleedReferenceRange}" />
 
-                    <TextBlock Grid.Column="0" Grid.Row="13" Margin="2,2,2,5" FontWeight="Bold">Comment:</TextBlock>
-                    <TextBox Grid.Column="0" Grid.Row="14" Margin="2,2,2,5" Grid.ColumnSpan="2" Text="{Binding Path=PanelSetOrder.ReportComment}" TextWrapping="Wrap" AcceptsReturn="True" />
+                    <TextBlock Grid.Column="0" Grid.Row="8" Margin="2,2,2,5" FontWeight="Bold">RhIG Vials Recommended:</TextBlock>
+                    <TextBox Grid.Column="1" Grid.Row="8" Margin="2,2,2,5" Width="100" Text="{Binding Path=PanelSetOrder.RhImmuneGlobulin}" />
+                    <TextBlock Grid.Column="2" Grid.Row="8" Margin="2,2,2,5" TextAlignment="Left" Text="300ug Vials" />
 
-                    <TextBlock Grid.Column="0" Grid.Row="15" Margin="2,2,2,5" FontWeight="Bold">ASR Comment:</TextBlock>
-                    <TextBox Grid.Column="0" Grid.Row="16" Margin="2,2,2,5" Grid.ColumnSpan="2" Text="{Binding Path=PanelSetOrder.ASRComment}" TextWrapping="Wrap" AcceptsReturn="True" />
+                    <TextBlock Grid.Column="0" Grid.Row="9" Margin="2,2,2,5" FontWeight="Bold">Comment:</TextBlock>
+                    <TextBox Grid.Column="0" Grid.Row="10" Margin="2,2,2,5" Grid.ColumnSpan="3" Text="{Binding Path=PanelSetOrder.ReportComment}" TextWrapping="Wrap" AcceptsReturn="True" />
 
-                    <TextBlock Grid.Column="0" Grid.Row="17" Margin="2,2,2,2" FontWeight="Bold" VerticalAlignment="Center">Distribute:</TextBlock>
-                    <CheckBox Grid.Column="1" Grid.Row="17" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.Distribute}" VerticalAlignment="Center" />
+                    <TextBlock Grid.Column="0" Grid.Row="11" Margin="2,2,2,5" FontWeight="Bold">ASR Comment:</TextBlock>
+                    <TextBox Grid.Column="0" Grid.Row="12" Margin="2,2,2,5" Grid.ColumnSpan="3" Text="{Binding Path=PanelSetOrder.ASRComment}" TextWrapping="Wrap" AcceptsReturn="True" />
 
-                    <TextBlock Grid.Column="0" Grid.Row="18" Margin="2,2,2,2" FontWeight="Bold">No Charge:</TextBlock>
-                    <CheckBox Grid.Column="1" Grid.Row="18" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.NoCharge}"></CheckBox>
+                    <TextBlock Grid.Column="0" Grid.Row="13" Margin="2,2,2,2" FontWeight="Bold" VerticalAlignment="Center">Distribute:</TextBlock>
+                    <CheckBox Grid.Column="1" Grid.Row="13" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.Distribute}" VerticalAlignment="Center" />
 
-                    <Grid Grid.Column="0" Grid.Row="19" Grid.ColumnSpan="2">
+                    <TextBlock Grid.Column="0" Grid.Row="14" Margin="2,2,2,2" FontWeight="Bold">No Charge:</TextBlock>
+                    <CheckBox Grid.Column="1" Grid.Row="14" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.NoCharge}"></CheckBox>
+
+                    <Grid Grid.Column="0" Grid.Row="15" Grid.ColumnSpan="3">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"></ColumnDefinition>
                             <ColumnDefinition Width="*"></ColumnDefinition>
