--- a/YellowstonePathology/UI/Login/Receiving/TaskOrderPage.xaml
+++ b/YellowstonePathology/UI/Login/Receiving/TaskOrderPage.xaml
@@ -75,7 +75,10 @@
                         <TextBlock Grid.Column="1" Grid.Row="7" Margin="2,2,2,2" Text="{Binding Path=AcknowledgedDate}" />
 
                         <StackPanel Grid.Column="2" Grid.Row="0" Grid.RowSpan="5" Margin="10,10,10,10">
-
+                            <TextBlock Margin="2,2,2,2">
+                                <Hyperlink Click="HyperLinkPublishFax_Click" Tag="{Binding Path=.}">Publish</Hyperlink>
+                            </TextBlock>
+                            
                             <TextBlock Margin="2,2,2,2">
                                 <Hyperlink Click="HyperLinkSendFax_Click" Tag="{Binding Path=.}">Send Fax</Hyperlink>
                             </TextBlock>
