--- a/YellowstonePathology/UI/Billing/EODProcessingDialog.xaml
+++ b/YellowstonePathology/UI/Billing/EODProcessingDialog.xaml
@@ -16,6 +16,7 @@
         <StackPanel Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="0" HorizontalAlignment="Stretch">
             <Menu Name="MainMenu" DockPanel.Dock="Top" Margin="0,0,0,0" HorizontalAlignment="Stretch">
                 <MenuItem Header="Actions" Name="MenuItemActions">
+                    <MenuItem Header="Update MRN/ACT" Click="MenuItemUpdateMRNACT_Click"></MenuItem>
                     <MenuItem Header="Match SVH ADT" Click="MenuItemMatchSVHADT_Click"></MenuItem>
                     <MenuItem Header="Process PSA Files" Click="MenuItemProcessPSAFiles_Click"></MenuItem>
                     <MenuItem Header="Transfer PSA Files" Click="MenuItemTransferPSAFiles_Click"></MenuItem>
